cert-manager/gitea-acme.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-acme
  namespace: gitea
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: git.gosu-devops.ru
    http:
      paths:
      - path: /.well-known/acme-challenge
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              number: 3000
