cert-manager/grafana-acme.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-acme
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: monitor.gosu-devops.ru
    http:
      paths:
      - path: /.well-known/acme-challenge
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
